--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 
   <div class="home-img">
-    <img src="portfoliopfp.jpg" width="300" height="450" alt="Profile Image">
+    <img src="images/portfoliopfp.jpg" width="300" height="450" alt="Profile Image">
   </div>
 </section>
 
