--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="https://www.linkedin.com/in/riabhatti777/" class="linkedin-icon">
         <i class='bx bxl-linkedin'></i>
       </a>
-      <a href="images/Ria_Resume.pdf" download="Ria_Resume.pdf" class="btn">Download Resume</a>
+      <a href="images/Ria_Bhatti_Resume_2025.pdf" download="Ria_Bhatti_Resume_2025.pdf" class="btn">Download Resume</a>
     </div>
   </div>
 
