--- a/index.html
+++ b/index.html
@@ -148,20 +148,17 @@
           
     </section>
 
-    <!--contact section design-->
+      <!--contact section design-->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
+            <div style="height: 20px;"></div> <!-- This creates a 20px tall blank space -->
+        <h2>Feel free to send me an email at: ria.bhatti@gmail.com</h2>
+        <h2>Check out some of my links:</h2>
+        <h2>www.linkedin.com/in/riabhatti777</h2>
+        <h2>https://github.com/riabhatti</h2>
 
-        <form action="#">
-            <div class="input-box">
-                <input type ="text" placeholder="Full Name">
-                <input type ="email" placeholder="Email Address">
-            </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
+
     </section>
-
 
     <!--footer design-->
     <footer class="footer">
