--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
             <div style="height: 20px;"></div> <!-- This creates a 20px tall blank space -->
-        <h2>Feel free to send me an email at: ria.bhatti@gmail.com</h2>
-        <h2>Check out some of my links:</h2>
-        <h2>www.linkedin.com/in/riabhatti777</h2>
-        <h2>https://github.com/riabhatti</h2>
+        <h2 style="font-size: 24px;">Feel free to send me an email at: ria.bhatti@gmail.com</h2>
+        <h2 style="font-size: 24px;">Check out some of my links:</h2>
+        <h2 style="font-size: 24px;">www.linkedin.com/in/riabhatti777</h2>
+        <h2 style="font-size: 24px;">https://github.com/riabhatti</h2>
 
 
     </section>
