--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="https://www.linkedin.com/in/riabhatti777/" class="linkedin-icon">
         <i class='bx bxl-linkedin'></i>
       </a>
-      <a href="images/Ria_Bhatti_Resume_2025.pdf" download="Ria_Bhatti_Resume_2025.pdf" class="btn">Download Resume</a>
+      <a href="Resume/Ria_Resume.pdf" download="Ria_Resume.pdf" class="btn">Download Resume</a>
     </div>
   </div>
 
@@ -109,7 +109,7 @@
 
      <div class="experience-card">
       <h3>Research Assistant</h3>
-      <p><strong>ASU 24HR Behavior Lab</strong> — May 2023 – December 2023</p>
+      <p><strong>ASU 24HR Behav ior Lab</strong> — May 2023 – December 2023</p>
       <ul>
            <li>Led a team to deliver participant tech support, reducing downtime by 60%.</li>
           <li>Designed automated data pipelines using Excel macros to improve organization and reduce manual errors.</li>
@@ -124,7 +124,11 @@
   </div>
   <div class="project-container">
  <div class="project-card">
-      <h3>Spotify Reccomendation Engine</h3>
+      <h3>Spotify Recomemndation Engine
+        <a href="https://github.com/riabhatti/Spotify-Recommendation-Engine" target="_blank" class="github-link">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+    </a>
+      </h3>
       <p><strong>Personal Project</strong>
       <ul>
            <li>Developed a Python-based tool leveraging the Spotify API to connect to personal playlists and provide song recommendations. </li>
@@ -141,6 +145,35 @@
             <li>Identified underperforming product lines and seasonal sales patterns using subcategory breakdowns and monthly performance trends.</li>
         </ul>
         </div>
+
+            <div class="project-card">
+     <h3>Sun CO.
+      <a href="https://github.com/riabhatti/Sun-CO" target="_blank" class="github-link">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+    </a>
+     </h3>
+      <p><strong>Academic Project</strong>
+      <ul>
+           <li>Led a team of 4 members to design a scalable e-commerce platform on AWS using Node.js and PostgreSQL. Enabled full CRUD for 500+ product SKUs with secure authentication, streamlining digital storefront for small business mock client.</li>	
+
+        </ul>
+        </div>
+
+            <div class="project-card">
+     <div class="project-container">
+  <h3>
+    Stock Price Forecasting & Risk Analysis Project
+    <a href="https://github.com/riabhatti/sp500-stock-analysis-montecarlo" target="_blank" class="github-link">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+    </a>
+  </h3>
+  <p><strong>Personal Project</strong></p>
+  <ul>
+    <li>
+      Created a Python-based market forecasting and risk analysis tool leveraging yFinance to analyze S&P 500 historical data. Directed feature selection and implementation of SMA indicators, linear regression modeling (RMSE: 18.21), and 1,000-run Monte Carlo simulations to support evidence-based product investment and risk management decisions.
+    </li>
+  </ul>
+</div>
   </div>
 </section>
 
@@ -148,17 +181,18 @@
           
     </section>
 
-      <!--contact section design-->
+    <!--contact section design-->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
             <div style="height: 20px;"></div> <!-- This creates a 20px tall blank space -->
-        <h2 style="font-size: 30px;">Feel free to send me an email at: ria.bhatti@gmail.com</h2>
-        <h2 style="font-size: 30px;">Check out some of my links:</h2>
-        <h2 style="font-size: 30px;">www.linkedin.com/in/riabhatti777</h2>
-        <h2 style="font-size: 30px;">https://github.com/riabhatti</h2>
+        <h2>Feel free to send me an email at: ria.bhatti@gmail.com</h2>
+        <h2>Check out some of my links:</h2>
+        <h2>www.linkedin.com/in/riabhatti777</h2>
+        <h2>https://github.com/riabhatti</h2>
 
 
     </section>
+
 
     <!--footer design-->
     <footer class="footer">
