--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </div>
   <div class="project-container">
  <div class="project-card">
-      <h3>Spotify Recomemndation Engine
+      <h3>Spotify Recommendation Engine
         <a href="https://github.com/riabhatti/Spotify-Recommendation-Engine" target="_blank" class="github-link">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
     </a>
