--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
 
   <div class="experience-container">
     <div class="experience-card">
+      <h3>Business Management Intern</h3>
+      <p><strong>Nextech Systems</strong> — September 2025 – Present</p>
+      <ul>
+        <li>Led executive-level working sessions with agency directors and security stakeholders to gather and validate financial, risk, and cybersecurity data for the State’s enterprise IT application portfolio, directly informing statewide investment and governance decisions.</li>
+        <li>Drove statewide IT portfolio management and auditing across 30+ agencies by cleaning, validating, and standardizing 5,000+ ServiceNow application records, enabling accurate analysis of application cost, risk, compliance, and strategic value.</li>
+        <li>Conducted deep-dive analysis on high-criticality and high-risk applications to support application optimization, modernization, and retirement recommendations.</li>
+        <li>Authored executive-ready presentations and a formal SOP to justify a ServiceNow license budget increase, demonstrating how expanded licensing would unlock advanced data collection, automation, and reporting capabilities across the State’s IT portfolio.</li>
+        <li>Audited ~5,000+ applications spanning 30,000+ data fields, identifying systemic data quality issues and reducing inaccuracies by 45%, significantly improving the reliability of financial forecasting, risk reporting, and executive dashboards.</li>
+        <li>Designed dynamic Smartsheet dashboards to provide leadership with real-time visibility into team capacity, workload distribution, and hours allocation, improving portfolio planning and operational efficiency.</li>
+        <li>Developed and standardized a ServiceNow data governance SOP, adopted across agencies to enforce consistent data entry, strengthen compliance, and enable scalable portfolio analytics.</li>
+      </ul>
+      <p><strong>Skills:</strong> Excel, Salesforce, Power BI, Forecasting, Data Analysis</p>
+    </div>
+
+    <div class="experience-card">
       <h3>Project Management Intern</h3>
       <p><strong>Nextech Systems</strong> — June 2025 – August 2025</p>
       <ul>
