--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div class="experience-container">
     <div class="experience-card">
       <h3>Business Management Intern</h3>
-      <p><strong>Nextech Systems</strong> — September 2025 – Present</p>
+      <p><strong>State of Arizona Enterprise Technology</strong> — September 2025 – Present</p>
       <ul>
         <li>Led executive-level working sessions with agency directors and security stakeholders to gather and validate financial, risk, and cybersecurity data for the State’s enterprise IT application portfolio, directly informing statewide investment and governance decisions.</li>
         <li>Drove statewide IT portfolio management and auditing across 30+ agencies by cleaning, validating, and standardizing 5,000+ ServiceNow application records, enabling accurate analysis of application cost, risk, compliance, and strategic value.</li>
@@ -233,4 +233,5 @@
 </body>
 
 </html>
+
 
